Resolved alignement issue with Navbar

--- a/inc/css/navbar.css
+++ b/inc/css/navbar.css
@@ -77,6 +77,7 @@ nav {
 #navbar ul {
   display: flex;
   list-style: none;
+  align-items: center;
 }
 
 .left ul li {
